# minizip-cpp

./: .codecov.yml  .gitignore  CMakeLists.txt  format
.github/workflows/: .codecov.yml  clang-analyze.yml  code-coverage.yml  linux.yml  windows.yml
include/minizip-cpp/: mz_aux.hpp  mzpp.hpp
src/: unzip.cpp  zip.cpp
tests/: CMakeLists.txt  sample.txt  test.cpp  unz_sample_short.txt
